# bigint

./: README.md  autogen.sh  build.sh  clean.sh  configure.ac
src/: Makefile.am  bigint.cc  bigint.h  main.cc
src/.deps/: bigint.Po  main.Po
